<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.UserSettings"
    android:elevation="15dp"
    >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/settings"
        android:textColor="@color/codezy_light_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/change_name"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:src="@drawable/user_settings_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/settings_username"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_username"
        android:textColor="@color/codezy_light_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/change_name"
        app:layout_constraintEnd_toEndOf="@+id/change_name"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/change_name"
        app:layout_constraintTop_toTopOf="@+id/change_name"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/change_profession"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user_settings_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_name" />

    <TextView
        android:id="@+id/settings_profession"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_profession"
        android:textColor="@color/codezy_light_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/change_profession"
        app:layout_constraintEnd_toEndOf="@+id/change_profession"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/change_profession"
        app:layout_constraintTop_toTopOf="@+id/change_profession"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/change_your_password"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:src="@drawable/user_settings_elements"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_your_mail"
        />

    <TextView
        android:id="@+id/settings_password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_password"
        android:textColor="@color/codezy_light_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/change_your_password"
        app:layout_constraintEnd_toEndOf="@+id/change_your_password"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/change_your_password"
        app:layout_constraintTop_toTopOf="@+id/change_your_password"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/change_your_mail"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user_settings_elements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_profession" />

    <TextView
        android:id="@+id/settings_mail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_email"
        android:textColor="@color/codezy_light_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/change_your_mail"
        app:layout_constraintEnd_toEndOf="@+id/change_your_mail"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="@+id/change_your_mail"
        app:layout_constraintTop_toTopOf="@+id/change_your_mail"
        app:layout_constraintVertical_bias="0.44" />


    <ImageView
        android:id="@+id/log_out_button"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:src="@drawable/log_out_button"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_your_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:text="@string/log_out"
        android:textColor="#c41616"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/log_out_button"
        app:layout_constraintEnd_toEndOf="@+id/log_out_button"
        app:layout_constraintStart_toStartOf="@+id/log_out_button"
        app:layout_constraintTop_toTopOf="@+id/log_out_button" />


</androidx.constraintlayout.widget.ConstraintLayout>