<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/registerbackground"
        >


        <View
            android:id="@+id/viewId2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codezyLogoLogin"
            tools:layout_editor_absoluteY="230dp" />

        <TextView
            android:id="@+id/getStartedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/welcome_back"
            android:alpha="0.7"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewId2" />

        <ImageView
            android:id="@+id/codezyLogoLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:src="@drawable/codezylogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/codezy_email"
            android:layout_width="375dp"
            android:layout_height="80dp"
            android:layout_marginTop="56dp"
            android:alpha="0.7"
            android:src="@drawable/textbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getStartedText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/codezy_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/codezy_email"
            app:layout_constraintTop_toTopOf="@+id/codezy_email"
            app:layout_constraintVertical_bias="0.678" />


        <ImageView
            android:id="@+id/codezy_password"
            android:layout_width="375dp"
            android:layout_height="80dp"
            android:alpha="0.7"
            android:inputType="textPassword"
            android:src="@drawable/textbox"
            app:layout_constraintEnd_toEndOf="@+id/codezy_email"
            app:layout_constraintStart_toStartOf="@+id/codezy_email"
            app:layout_constraintTop_toBottomOf="@+id/codezy_email" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/codezy_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/codezy_password"
            app:layout_constraintTop_toTopOf="@+id/codezy_password"
            app:layout_constraintVertical_bias="0.678" />

        <TextView
            android:id="@+id/yourEmailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.9"
            android:text="@string/email_address"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/codezy_email"
            app:layout_constraintEnd_toEndOf="@+id/codezy_email"
            app:layout_constraintHorizontal_bias="0.084"
            app:layout_constraintStart_toStartOf="@+id/codezy_email"
            app:layout_constraintTop_toTopOf="@+id/codezy_email"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/yourPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:text="@string/password"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/codezy_password"
            app:layout_constraintEnd_toEndOf="@+id/codezy_password"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="@+id/codezy_password"
            app:layout_constraintTop_toTopOf="@+id/codezy_password"
            app:layout_constraintVertical_bias="0.18" />

        <ImageView
            android:id="@+id/registerLoginButton"
            android:layout_width="375dp"
            android:layout_height="80dp"
            android:src="@drawable/register_or_login_button"
            app:layout_constraintEnd_toEndOf="@+id/codezy_password"
            app:layout_constraintStart_toStartOf="@+id/codezy_password"
            app:layout_constraintTop_toBottomOf="@+id/codezy_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/registerLoginButton"
            app:layout_constraintEnd_toEndOf="@+id/registerLoginButton"
            app:layout_constraintStart_toStartOf="@+id/registerLoginButton"
            app:layout_constraintTop_toTopOf="@+id/registerLoginButton" />

        <ImageView
            android:id="@+id/goToSignUp"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:src="@drawable/sign_and_login_but"
            app:layout_constraintBottom_toTopOf="@+id/codezyLogoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#D2D2D2"
            app:layout_constraintBottom_toTopOf="@+id/codezyLogoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/goToSignUp"
            app:layout_constraintHorizontal_bias="0.807"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goToSignUp"
            app:layout_constraintVertical_bias="0.29" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/goToSignUp"
            app:layout_constraintEnd_toEndOf="@+id/goToSignUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/goToSignUp"
            app:layout_constraintTop_toTopOf="@+id/goToSignUp"
            app:layout_constraintVertical_bias="0.5" />



        <ImageView
            android:id="@+id/orSignUpWith"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:src="@drawable/or_login_with"
            app:layout_constraintEnd_toEndOf="@+id/registerLoginButton"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/registerLoginButton"
            app:layout_constraintTop_toBottomOf="@+id/registerLoginButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_details_below"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/codezy_email"
            app:layout_constraintEnd_toEndOf="@+id/getStartedText"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/getStartedText"
            app:layout_constraintTop_toBottomOf="@+id/getStartedText"
            app:layout_constraintVertical_bias="0.363" />

        <ImageView
            android:id="@+id/firebaseGoogle"
            android:layout_width="375dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/google_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/orSignUpWith"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/orSignUpWith"
            app:layout_constraintTop_toBottomOf="@+id/orSignUpWith" />



        <TextView
            android:id="@+id/forgotYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/orSignUpWith"
            app:layout_constraintEnd_toEndOf="@+id/orSignUpWith"
            app:layout_constraintStart_toStartOf="@+id/orSignUpWith"
            app:layout_constraintTop_toBottomOf="@+id/registerLoginButton" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>